Remove conflicting bindings from tmux.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,12 +7,6 @@ set -g default-terminal screen-256color
 # Keep your finger on ctrl, or don't
 bind-key ^D detach-client
 
-# Create splits and vertical splits
-bind-key v split-window -h -p 50 -c "#{pane_current_path}"
-bind-key ^V split-window -h -p 50 -c "#{pane_current_path}"
-bind-key s split-window -p 50 -c "#{pane_current_path}"
-bind-key ^S split-window -p 50 -c "#{pane_current_path}"
-
 # Pane resize in all four directions using vi bindings.
 # Can use these raw but I map them to shift-ctrl-<h,j,k,l> in iTerm.
 bind -r H resize-pane -L 5
@@ -71,7 +65,10 @@ set -g window-status-current-format '#[fg=colour234,bg=colour39]⮀#[fg=black,bg
 set-option -g status-interval 2
 
 # Patch for OS X pbpaste and pbcopy under tmux.
-set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
+#set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
+# Avoid && || to make it work around tmux-resurrect
+# set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+
 
 # Screen like binding
 unbind C-b
